# lib_spellcheck

./: CMakeLists.txt  lib_spellcheck.gyp
gyp/: sources.txt
highlighting/: highlighting.qrc
spellcheck/: spellcheck_highlight_syntax.cpp  spellcheck_highlight_syntax.h  spellcheck_hunspell.cpp  spellcheck_hunspell.h  spellcheck_pch.cpp  spellcheck_pch.h  spellcheck_types.h  spellcheck_utils.cpp  spellcheck_utils.h  spellcheck_value.cpp  spellcheck_value.h  spellchecker_locale_script.cpp  spelling_highlighter.cpp  spelling_highlighter.h  spelling_highlighter_helper.cpp  spelling_highlighter_helper.h
spellcheck/chat_helpers/: spellchecker_helper.cpp  spellchecker_helper.h
spellcheck/platform/: platform_language.h  platform_spellcheck.h
spellcheck/platform/linux/: language_linux.cpp  linux_enchant.cpp  spellcheck_linux.cpp
spellcheck/platform/mac/: language_mac.mm  spellcheck_mac.h  spellcheck_mac.mm
spellcheck/platform/win/: language_win.cpp  spellcheck_win.cpp  spellcheck_win.h
spellcheck/spellchecker/: spellchecker_controller.cpp  spellchecker_controller.h  spellchecker_locale_script.cpp  spellchecker_locale_script.h  spelling_highlighter.cpp  spelling_highlighter.h
